[package]
name = "radence"
version = "0.0.1"
authors = ["codic <codic@linuxmail.org>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0.0"
bootloader = { version = "0.9.3", features = ["map_physical_memory"]}
linked_list_allocator = "0.8.0"
x86_64 = "0.11.0"
spin = "0.5.2"
volatile = "0.2.6"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
